# rsmultigit

./: CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
.config/: nextest.toml
.github/workflows/: main.yml  release.yml
assets/: config-example.toml
docs/: book.toml
docs/src/: architecture.md  commands.md  configuration.md  discovery.md  getting-started.md  installation.md  introduction.md  testing.md
examples/: veltzer.rsmultigit.toml
src/: cli.rs  config.rs  main.rs  runner.rs  subprocess_utils.rs
src/commands/: blame.rs  branch.rs  build.rs  check.rs  clean.rs  config.rs  count.rs  diff.rs  fetch.rs  grep.rs  interactive.rs  last_tag.rs  mod.rs  pull.rs  push.rs  size.rs  stash.rs  submodule.rs  tag.rs
tests/: main.rs
tests/common/: mod.rs
tests/tests_mod/: check_same.rs  cli.rs  count.rs  status.rs  version.rs
