[package]
name = "rsmultigit"
version = "0.1.3"
edition = "2024"
authors = ["Mark Veltzer <mark.veltzer@gmail.com>"]
description = "Manage multiple git repositories at once"
license = "MIT"
repository = "https://github.com/veltzer/rsmultigit"

[features]
vendored-openssl = ["git2/vendored-openssl"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5"
git2 = "0.20"
glob = "0.3"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[profile.release]
strip = true
lto = true
